feat: add token-action-hud

--- a/src/module.yml
+++ b/src/module.yml
@@ -1,6 +1,6 @@
 ---
 id: token-action-hud-cof
-title: Token Action HUD for Chroniques Oubliées Fantasy
+title: Token Action HUD COF
 description: Token Action HUD is a repositionable HUD of actions for a selected token
 version: 0.0.0-dev
 url: This is auto replaced
