fix: rename module

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "token-action-hud-cof",
+  "name": "token-action-hud-cof1e",
   "type": "module",
   "private": true,
   "license": "MIT",
