--- a/package.json
+++ b/package.json
@@ -11,8 +11,8 @@
     "clean": "gulp clean",
     "clean:link": "gulp link --clean",
     "typecheck": "tsc --noEmit",
-    "lint": "eslint --ext .ts,.js,.cjs,.mjs src",
-    "lint:fix": "eslint --ext .ts,.js,.cjs,.mjs --no-ignore --fix src",
+    "lint": "eslint src",
+    "lint:fix": "eslint --no-ignore --fix src",
     "format": "prettier --write \"./**/*.(ts|js|cjs|mjs|json|yml|scss)\"",
     "test": "jest",
     "test:watch": "jest --watch",
@@ -21,36 +21,41 @@
     "postinstall": "husky install"
   },
   "devDependencies": {
-    "@commitlint/cli": "^18.4.3",
-    "@commitlint/config-conventional": "^18.4.3",
-    "@types/eslint": "^8.44.8",
-    "@types/jquery": "^3.5.29",
-    "@types/node": "^20.10.4",
+    "@commitlint/cli": "^19.6.0",
+    "@commitlint/config-conventional": "^19.6.0",
+    "@eslint/js": "^9.16.0",
+    "@types/eslint": "^9.6.1",
+    "@types/jquery": "^3.5.32",
+    "@types/node": "^22.10.2",
     "@types/prettier": "^3.0.0",
-    "@typescript-eslint/eslint-plugin": "^6.14.0",
-    "@typescript-eslint/parser": "^6.14.0",
-    "eslint": "^8.55.0",
+    "@typescript-eslint/eslint-plugin": "^8.18.0",
+    "@typescript-eslint/parser": "^8.18.0",
+    "@typescript-eslint/utils": "^8.18.0",
+    "eslint": "^9.16.0",
     "eslint-config-prettier": "^9.1.0",
-    "eslint-plugin-jest": "^27.6.0",
-    "eslint-plugin-prettier": "^5.0.1",
+    "eslint-plugin-import": "^2.31.0",
+    "eslint-plugin-jest": "^28.9.0",
+    "eslint-plugin-prettier": "^5.2.1",
     "fs-extra": "^11.2.0",
-    "gulp": "^4.0.2",
+    "globals": "^15.13.0",
+    "gulp": "^5.0.0",
     "gulp-dart-sass": "^1.1.0",
     "gulp-vite": "^1.2.0",
     "gulp-yaml": "^2.0.4",
-    "husky": "^8.0.3",
+    "husky": "^9.1.7",
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
     "jest-junit": "^16.0.0",
     "jquery": "^3.7.1",
-    "lint-staged": "^15.2.0",
-    "prettier": "^3.1.1",
-    "sass": "^1.69.5",
-    "ts-jest": "^29.1.1",
+    "lint-staged": "^15.2.11",
+    "prettier": "^3.4.2",
+    "sass": "^1.83.0",
+    "ts-jest": "^29.2.5",
     "ts-node": "^10.9.2",
-    "tslib": "^2.6.2",
-    "typescript": "^5.3.3",
-    "vite": "^5.0.7",
+    "tslib": "^2.8.1",
+    "typescript": "^5.7.2",
+    "typescript-eslint": "^8.18.0",
+    "vite": "^6.0.3",
     "yargs": "^17.7.2"
   },
   "lint-staged": {
