--- a/tsconfig.eslint.json
+++ b/tsconfig.eslint.json
@@ -1,5 +1,8 @@
 {
   "extends": "./tsconfig.json",
+  "compilerOptions": {
+    "resolveJsonModule": true
+  },
   "include": ["src", ".eslintrc.cjs", "vite.config.ts", "*.js", "*.cjs", "*.mjs"],
   "exclude": ["@types", "*.d.ts"]
 }
