--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "type": "module",
   "private": true,
   "license": "MIT",
+  "packageManager": "yarn@4.5.3",
   "scripts": {
     "dev": "gulp dev",
     "build": "gulp build && vite build",
