--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "type": "module",
   "private": true,
   "license": "MIT",
-  "packageManager": "yarn@4.5.3",
+  "packageManager": "pnpm@10.15.0",
   "scripts": {
     "dev": "gulp dev",
     "build": "gulp build && vite build",
@@ -60,7 +60,7 @@
     "yargs": "^17.7.2"
   },
   "lint-staged": {
-    "*.(ts|js|cjs|mjs)": "yarn eslint --fix",
-    "*.(json|yml|scss)": "yarn prettier --write"
+    "*.(ts|js|cjs|mjs)": "pnpm eslint --fix",
+    "*.(json|yml|scss)": "pnpm prettier --write"
   }
 }
