--- a/.github/workflows/checks.yml
+++ b/.github/workflows/checks.yml
@@ -17,23 +17,25 @@ jobs:
         uses: actions/setup-node@v4
         with:
           node-version: ${{ env.node_version }}
-          cache: yarn
+          #cache: pnpm
+
+      - uses: pnpm/action-setup@v4
 
       - name: Cache modules
         uses: actions/cache@v3
         id: cache-modules
         with:
-          path: .yarn/cache
-          key: ${{ runner.OS }}-yarn-${{ hashFiles('**/yarn.json') }}
+          path: .pnpm/cache
+          key: ${{ runner.OS }}-pnpm-${{ hashFiles('**/pnpm.json') }}
           restore-keys: |
-            ${{ runner.OS }}-yarn-
+            ${{ runner.OS }}-pnpm-
             ${{ runner.OS }}-
 
       - name: Install dependencies
-        run: yarn
+        run: pnpm install
 
       - name: Lint
-        run: yarn lint
+        run: pnpm lint
 
   test:
     runs-on: ubuntu-latest
@@ -46,21 +48,23 @@ jobs:
         with:
           node-version: ${{ env.node_version }}
 
+      - uses: pnpm/action-setup@v4
+
       - name: Cache modules
         uses: actions/cache@v3
         id: cache-modules
         with:
-          path: .yarn/cache
-          key: ${{ runner.OS }}-yarn-${{ hashFiles('**/yarn.json') }}
+          path: .pnpm/cache
+          key: ${{ runner.OS }}-pnpm-${{ hashFiles('**/pnpm.json') }}
           restore-keys: |
-            ${{ runner.OS }}-yarn-
+            ${{ runner.OS }}-pnpm-
             ${{ runner.OS }}-
 
       - name: Install dependencies
-        run: yarn
+        run: pnpm install
 
       - name: Test
-        run: yarn test:ci
+        run: pnpm test:ci
 
   typecheck:
     runs-on: ubuntu-latest
@@ -73,21 +77,23 @@ jobs:
         with:
           node-version: ${{ env.node_version }}
 
+      - uses: pnpm/action-setup@v4
+
       - name: Cache modules
         uses: actions/cache@v3
         id: cache-modules
         with:
-          path: .yarn/cache
-          key: ${{ runner.OS }}-yarn-${{ hashFiles('**/yarn.json') }}
+          path: .pnpm/cache
+          key: ${{ runner.OS }}-pnpm-${{ hashFiles('**/pnpm.json') }}
           restore-keys: |
-            ${{ runner.OS }}-yarn-
+            ${{ runner.OS }}-pnpm-
             ${{ runner.OS }}-
 
       - name: Install dependencies
-        run: yarn
+        run: pnpm install
 
       - name: Typecheck
-        run: yarn typecheck
+        run: pnpm typecheck
 
   build:
     runs-on: ubuntu-latest
@@ -100,18 +106,20 @@ jobs:
         with:
           node-version: ${{ env.node_version }}
 
+      - uses: pnpm/action-setup@v4
+
       - name: Cache modules
         uses: actions/cache@v3
         id: cache-modules
         with:
-          path: .yarn/cache
-          key: ${{ runner.OS }}-yarn-${{ hashFiles('**/yarn.json') }}
+          path: .pnpm/cache
+          key: ${{ runner.OS }}-pnpm-${{ hashFiles('**/pnpm.json') }}
           restore-keys: |
-            ${{ runner.OS }}-yarn-
+            ${{ runner.OS }}-pnpm-
             ${{ runner.OS }}-
 
       - name: Install dependencies
-        run: yarn
+        run: pnpm install
 
       - name: Build
-        run: yarn build
+        run: pnpm build
